--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.13",
     "@uidotdev/usehooks": "^2.4.1",
     "next": "14.2.3",
     "react": "^18",
