--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -27,6 +30,7 @@
     "@vitest/ui": "2.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "jest-mock": "^29.7.0",
     "jsdom": "^25.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
