--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.13",
     "@uidotdev/usehooks": "^2.4.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
