--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
-        "@types/node": "^20",
-        "@types/react": "^18",
+        "@types/node": "24.3.0",
+        "@types/react": "19.1.11",
         "@types/react-dom": "^18",
         "@vitejs/plugin-react": "^4.3.2",
         "@vitest/ui": "2.1.3",
@@ -42,7 +42,7 @@
         "jsdom": "^25.0.1",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5",
+        "typescript": "5.9.2",
         "vitest": "^2.1.3"
     }
 }
