--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "universal-cookie": "^7.2.2"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
@@ -41,7 +42,7 @@
         "jest-mock": "^29.7.0",
         "jsdom": "^25.0.1",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^4.1.13",
         "typescript": "5.9.2",
         "vitest": "^2.1.3"
     }
