--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
         "@types/react-dom": "^18",
         "@vitejs/plugin-react": "^4.3.2",
         "@vitest/ui": "2.1.3",
+        "autoprefixer": "^10.4.21",
         "depcheck": "^1.4.7",
         "eslint": "^8",
         "eslint-config-next": "14.2.3",
         "jest-mock": "^29.7.0",
         "jsdom": "^25.0.1",
-        "postcss": "^8",
+        "postcss": "^8.5.6",
         "tailwindcss": "^4.1.13",
         "typescript": "5.9.2",
         "vitest": "^2.1.3"
