--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.2.1",
+        "sharp": "^0.34.4",
         "universal-cookie": "^7.2.2"
     },
     "devDependencies": {
